--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- IMPUT SIMPLE CHECKBOX -->
 
     <div class="form_input">
-      <label>Acepto los términos y condiciones
+      <label>Acepto los <a href="/04 Formulario/term.html">términos y condiciones</a>
         <input type="checkbox" class="check">
       </label>
     </div>
