Enlaces a cada término y condición de term.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- IMPUT SIMPLE CHECKBOX -->
 
     <div class="form_input">
-      <label>Acepto los <a href="/04 Formulario/term.html" target="_blank">términos y condiciones</a>
+      <label>Acepto los <a href="term.html" target="_blank">términos y condiciones</a>
         <input type="checkbox" class="check">
       </label>
     </div>
