--- a/term.html
+++ b/term.html
@@ -10,15 +10,46 @@
 
 <body>
   <h1>Términos y Condiciones de Uso</h1>
+
+  <h2>Secciones</h2>
+  <ol>
+    <a href="#introduccion">
+      <li>Introducción</li>
+    </a>
+    <a href="#definiciones">
+      <li>Definiciones</li>
+    </a>
+    <a href="#uso_de_la_pagina_web">
+      <li>Uso de la página web</li>
+    </a>
+    <a href="#propiedad_intelectual">
+      <li>Propiedad Intelectual</li>
+    </a>
+    <a href="#enlaces">
+      <li>Enlaces a Sitios de Terceros</li>
+    </a>
+    <a href="#responsabilidad">
+      <li>Limitación de Responsabilidad</li>
+    </a>
+    <a href="#modificaciones">
+      <li>Modificaciones de los Términos</li>
+    </a>
+    <a href="#ley">
+      <li>Ley Aplicable y Jurisdicción</li>
+    </a>
+    <a href="#contacto">
+      <li>Contacto</li>
+    </a>
+  </ol>
   <section>
-    <h2>1. Introducción</h2>
+    <h2 id="introduccion">1. Introducción</h2>
     <p>Bienvenido a [Nombre de la Página Web] ("la Página Web"). Estos Términos y Condiciones de Uso ("Términos")
       regulan el acceso y uso de la Página Web y de los servicios y productos ofrecidos a través de ella. Al acceder o
       utilizar la Página Web, usted acepta estar sujeto a estos Términos. Si no está de acuerdo con estos Términos, por
       favor no utilice la Página Web.</p>
   </section>
   <section>
-    <h2>2. Definiciones</h2>
+    <h2 id="definiciones">2. Definiciones</h2>
     <p><strong>Usuario:</strong> Cualquier persona que accede o utiliza la Página Web.</p>
     <p><strong>Contenido:</strong> Toda información, texto, gráficos, imágenes, vídeos, u otros materiales disponibles
       en la Página Web.</p>
@@ -26,7 +57,7 @@
       disponibles a través de la Página Web.</p>
   </section>
   <section>
-    <h2>3. Uso de la Página Web</h2>
+    <h2 id="uso_de_la_pagina_web">3. Uso de la Página Web</h2>
     <h3>3.1 Elegibilidad</h3>
     <p>El uso de la Página Web está limitado a personas mayores de 18 años o aquellas que hayan alcanzado la mayoría de
       edad en su jurisdicción.</p>
@@ -45,7 +76,7 @@
     </ul>
   </section>
   <section>
-    <h2>4. Propiedad Intelectual</h2>
+    <h2 id="propiedad_intelectual">4. Propiedad Intelectual</h2>
     <h3>4.1 Derechos de Autor</h3>
     <p>Todo el Contenido de la Página Web, incluyendo textos, gráficos, logotipos, iconos, imágenes, clips de audio y
       video, es propiedad de [Nombre de la Página Web] o sus proveedores de contenido y está protegido por las leyes de
@@ -56,31 +87,31 @@
       propietario está estrictamente prohibido.</p>
   </section>
   <section>
-    <h2>5. Enlaces a Sitios de Terceros</h2>
+    <h2 id="enlaces">5. Enlaces a Sitios de Terceros</h2>
     <p>La Página Web puede contener enlaces a sitios web de terceros que no son propiedad ni están controlados por
       [Nombre de la Página Web]. No somos responsables del contenido ni de las prácticas de privacidad de dichos sitios.
       Usted accede a estos enlaces bajo su propio riesgo.</p>
   </section>
   <section>
-    <h2>6. Limitación de Responsabilidad</h2>
+    <h2 id="responsabilidad">6. Limitación de Responsabilidad</h2>
     <p>[Nombre de la Página Web] no será responsable de ningún daño directo, indirecto, incidental, especial,
       consecuente o ejemplar que resulte del uso o la imposibilidad de uso de la Página Web o de los Servicios.</p>
   </section>
   <section>
-    <h2>7. Modificaciones de los Términos</h2>
+    <h2 id="modificaciones">7. Modificaciones de los Términos</h2>
     <p>Nos reservamos el derecho de modificar estos Términos en cualquier momento. Las modificaciones serán efectivas
       inmediatamente después de su publicación en la Página Web. Es su responsabilidad revisar periódicamente estos
       Términos. El uso continuado de la Página Web después de cualquier modificación constituye su aceptación de los
       nuevos Términos.</p>
   </section>
   <section>
-    <h2>8. Ley Aplicable y Jurisdicción</h2>
+    <h2 id="ley">8. Ley Aplicable y Jurisdicción</h2>
     <p>Estos Términos se regirán e interpretarán de acuerdo con las leyes de [País/Estado]. Usted acepta someterse a la
       jurisdicción exclusiva de los tribunales de [País/Estado] para la resolución de cualquier disputa que surja en
       relación con estos Términos o con el uso de la Página Web.</p>
   </section>
   <section>
-    <h2>9. Contacto</h2>
+    <h2 id="contacto">9. Contacto</h2>
     <p>Si tiene alguna pregunta sobre estos Términos, por favor contacte con nosotros a través de [Correo Electrónico de
       Contacto].</p>
   </section>
