Descargar términos y condiciones

--- a/term.html
+++ b/term.html
@@ -118,5 +118,11 @@
   <p>Al utilizar nuestra Página Web, usted reconoce que ha leído, entendido y acepta estar sujeto a estos Términos y
     Condiciones de Uso.</p>
 </body>
+<br>
+<hr>
+
+<section>
+  <h3>Descarga Términos y Condiciones de Uso Clicando<a href="term.html" download="">Aquí</a></h3>
+</section>
 
 </html>
