--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulario</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="/04 Formulario/files.png">
+  <link rel="icon" href="files.png">
 </head>
 
 <body>
@@ -84,7 +84,8 @@
     <!-- IMPUT SIMPLE CHECKBOX -->
 
     <div class="form_input">
-      <label>Acepto los <a href="term.html" target="_blank">términos y condiciones</a>
+      <label>Acepto los <a href="term.html" target="_blank" rel="noopener noreferrer nofollow">términos y
+          condiciones</a>
         <input type="checkbox" class="check">
       </label>
     </div>
