Enlaces correo y teléfono

--- a/term.html
+++ b/term.html
@@ -112,8 +112,8 @@
   </section>
   <section>
     <h2 id="contacto">9. Contacto</h2>
-    <p>Si tiene alguna pregunta sobre estos Términos, por favor contacte con nosotros a través de [Correo Electrónico de
-      Contacto].</p>
+    <p>Si tiene alguna pregunta sobre estos Términos, por favor contacte con nosotros a través de <a
+        href="mailto: ejemplo@ejemplo.com">correo electrónico</a> o <a href="tel: +34123456789">teléfono</a> </p>
   </section>
   <p>Al utilizar nuestra Página Web, usted reconoce que ha leído, entendido y acepta estar sujeto a estos Términos y
     Condiciones de Uso.</p>
