--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Formulario</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="files.png">
+  <meta name="description" content="formulario de contacto">
 </head>
 
 <body>
