Añadir enlace Github

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
 
+  <a class="enlace" href="https://github.com/JaviCalonge" target="_blank" rel="noopener noreferrer">
+    <img src="github.png" alt="Icono Github" width="24">
+    <span>Javi Calonge</span>
+  </a>
+
   <form action="formulario">
 
     <h2>Formulario de contacto</h2>
